src/main/java/com/example/mybookshopapp/errors/PaymentStatusException.java
package com.example.mybookshopapp.errors;

public class PaymentStatusException extends Exception{
    public PaymentStatusException(String message){super(message);}
}
